--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,4 +6,24 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "server"
+path = "src/main.rs"
+
+
 [dependencies]
+warp = "0.2.4"
+futures = { version = "0.3", default-features = false, features = ["alloc"] }
+tokio = { version = "0.2.22", features = ["fs", "stream", "sync", "time", "macros"]}
+dns-lookup= "1.0.3"
+tonic = {version = "0.3.0", features=["tls"]}
+prost = "0.6"
+async-stream = "0.3.0"
+serde_json = "1.0"
+lazy_static = "1.4.0"
+uuid = { version = "0.8", features = ["serde", "v4"] }
+job_scheduler = "1.2.1"
+cdrs = { version = "2" }
+
+[build-dependencies]
+tonic-build = "0.3"
