--- a/istio-server-deployment.yaml
+++ b/istio-server-deployment.yaml
@@ -1,19 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  namespace: poc
-  name: poc-server-service
-  labels:
-    run: poc-server
-spec:
-  ports:
-  - port: 50051
-    name: grpc
-  selector:
-    run: poc-server
-
----
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -39,5 +23,22 @@ spec:
           ports:
             - containerPort: 50051
               name: grpc
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  namespace: poc
+  name: poc-server
+  labels:
+    run: poc-server
+spec:
+  ports:
+  - port: 50051
+    name: grpc
+    protocol: TCP
+  selector:
+    run: poc-server
 
 ---
