--- a/istio-virtualservice.yaml
+++ b/istio-virtualservice.yaml
@@ -1,16 +1,15 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: poc-server-virutalservice
+  name: poc-server
+  namespace: poc
 spec:
   gateways:
-  - poc-server-gateway
+  - poc-server
   hosts:
-  - '*'
+  - poc-server
   http:
-  - match:
-    - uri:
-        prefix: /
+  - name: "grpc"
     route:
     - destination:
         host: poc-server
@@ -25,7 +24,5 @@ metadata:
 spec:
   host: poc-server
   trafficPolicy:
-    tls:
-      mode: ISTIO_MUTUAL  
     loadBalancer:
       simple: ROUND_ROBIN
